2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed  duplicate member bug.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 436705 - code completion
	for constructors does not handle class name collisions properly'.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: using type reference parsing for object
	creation.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 432434 - Code completion
	doesn't work with subclasses'.

2008-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBindingCompilerManager.cs: Write the comand used for compiling
	to the output. Fixes bug #430499.

2008-10-29  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed bug 'Bug 439601 - Intellisense Broken
	For Partial Classes'.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed 'Bug 325173 - Clashes resolved
	incorrectly'.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 439446 - Invoking
	events has extra completion options'.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* CSharpBinding.addin.xml: removed old ambience reference.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* CSharpBinding.addin.xml: moved ambience extension node to project
	model.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* CSharpBinding.addin.xml: fixed 'Bug 399737 - Code completion busted
	for referenced assemblies that are not in GAC, are outside of the
	solution, and which are referenced by other non-GAC outside
	referenced assemblies'.

2008-10-28  Mike Krüger  <mkrueger@novell.com>

	* Gui/EventCreationCompletionData.cs: event creation is now done with a
	stringbuilder.

2008-10-28  Mike Krüger  <mkrueger@novell.com>
